@@ -2,7 +2,8 @@
   [Jörg Frings-Fürst]
     * www/vicidial/admin.php: Fix escaping for auto_answer_sipheader.
     * Add sniplet into perl scripts to run only once a time (2018-0010):
-      - Change bin/AST_CRON_audio_2_compress.pl
+      - Change bin/AST_CRON_audio_2_compress.pl,
+        bin/ADMIN_keepalive_ALL.pl
 
 2.25.27
   [Jörg Fring-Fürst]
